--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -2,8 +2,36 @@
     background: #8e2735;
 }
 
+.under-name {
+    font-size: 25px;
+    font-style: italic;
+}
+
 .under-name,
-.name,
+
 .item {
     color: rgb(248, 225, 121);
+}
+
+.navbar-nav, 
+.name,
+.active {
+    color: rgb(255, 196, 0) !important;
+}
+
+.item,
+.navbar-nav {
+    font-size: 25px;
+    font-weight: 500;
+    margin-right: 15px;
+    
+}
+
+.under-name,
+.name {
+    margin-left: 20px;
+}
+
+.item:hover {
+    color: rgb(255, 196, 0) !important;
 }
