--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,8 +1,8 @@
 .footer {
     background: #8e2735;
-    position: fixed;
+    /* position: fixed;
     width: 100%;
-    bottom: 0;
+    bottom: 0; */
 }
 
 .fa-github, 
