--- a/src/pages/AboutMePage/AboutMe.css
+++ b/src/pages/AboutMePage/AboutMe.css
@@ -1,4 +1,13 @@
 .avatar {
-    height: 50%;
-    width: 50%;
+    height: 20%;
+    width: 20%;
+}
+
+.about-page {
+    margin: 30px 120px 0px 80px;
+    min-height: 750px;
+}
+
+h1 {
+    font-size: 30px;
 }
