--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -8,7 +8,6 @@
 }
 
 .under-name,
-
 .item {
     color: rgb(248, 225, 121);
 }
@@ -34,4 +33,8 @@
 
 .item:hover {
     color: rgb(255, 196, 0) !important;
+}
+
+.name {
+    font-size: 40px;
 }
