--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -1,10 +1,13 @@
 .style-nav {
     background: #8e2735;
+    padding: 0px 16px 5px 16px !important;
 }
 
 .under-name {
     font-size: 25px;
     font-style: italic;
+    padding-bottom: 10px;
+    margin-bottom: 0px;
 }
 
 .under-name,
@@ -37,4 +40,6 @@
 
 .name {
     font-size: 40px;
+    padding-top: 10px;
+    margin-bottom: 10px;
 }
