--- a/src/components/PortfolioCard/PortfolioCard.css
+++ b/src/components/PortfolioCard/PortfolioCard.css
@@ -1,8 +1,7 @@
 .portfolio-image {
     height: 350px;
     width: 550px;
-    border: 6px;
-    border-style: solid;
+    opacity: 0.5;
 }
 
 .portfolio-page {
@@ -16,19 +15,16 @@
 
 .portfolio-card {
     position: relative;
-    margin: 30px
-}
-
-.project-links {
-    /* position: absolute;
-    bottom: 50px;
-    left: 4px; */
+    margin: 30px;
+    border: 4px;
+    border-style: solid;
+    background-color: white;
 }
 
 .project-anchor {
     position: absolute;
     bottom: 50px;
-    left: 4px;
+    left: 0px;
     margin-bottom: 20px;
     color: rgb(248, 225, 121);
     text-decoration: none;
@@ -48,8 +44,8 @@
 
 .git-anchor {
     position: absolute;
-    bottom: 21px;
-    left: 5px;
+    bottom: 20px;
+    left: 0px;
     color: black;
     background: rgb(248, 225, 121);
     padding: 0px 7px;
