--- a/src/pages/ResumePage/Resume.css
+++ b/src/pages/ResumePage/Resume.css
@@ -16,12 +16,16 @@ h4 {
 .resume-bttn {
     height: 40px;
     width: 120px;
-    border: 3px;
+    border: 4px;
     border-color:#8e2735;
     border-style: solid;
     font-weight: bold;
-    background:  rgb(248, 225, 121);
+    background:  rgb(243, 214, 85);
     margin-bottom: 40px;
+}
+
+.resume-bttn:hover {
+    background: rgb(255, 196, 0) !important;
 }
 
 .proficiencies {
